--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <!--Drawer layout fragment names-->
     <string name="currentTripFragment_name">Current Trip</string>
-    <string name="locationsFragment_name">Locations</string>
-    <string name="routesFragment_name">Routes</string>
+    <string name="locationsFragment_name">All Locations</string>
+    <string name="routesFragment_name">All Routes</string>
     <string name="myLocationsFragment_name">My Locations</string>
     <string name="myRoutesFragment_name">My Routes</string>
     <string name="settingsFragment_name">Settings</string>
