--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="myLocationsFragment_name">My Locations</string>
     <string name="myRoutesFragment_name">My Routes</string>
     <string name="settingsFragment_name">Settings</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
 
 </resources>
