Implemented MyRoutesFragment.kt, RouteFragment.kt to display all routes and selected route information with feature to assign locations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,8 @@
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="update">Update</string>
+    <string name="locations">Locations</string>
+    <string name="upload_locations">Upload locations</string>
+    <string name="map">Map</string>
 
 </resources>
