Implemented option to remove and open description of locations from RouteFragment.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="locations">Locations</string>
     <string name="upload_locations">Upload locations</string>
     <string name="map">Map</string>
+    <string name="header_image">Header Image</string>
 
 </resources>
