Better locations error handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,9 @@
     <string name="map">Map</string>
     <string name="header_image">Header Image</string>
     <string name="search">Search</string>
+    <string name="location_search">Location Search</string>
+    <string name="time_to_visit">Time To Visit</string>
+    <string name="price">Price</string>
 
 
 </resources>
