Implemented locations sort

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,10 @@
     <string name="price">Price</string>
     <string name="apply">Apply</string>
     <string name="sort">Sort</string>
+    <string name="sort_order">Sort order</string>
+    <string name="sort_by">Sort by</string>
+    <string name="ascending">Ascending</string>
+    <string name="descending">Descending</string>
 
 
 </resources>
