Implemented possibility to change route locations sequence

--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -42,5 +42,6 @@
     <string name="language">Kalba</string>
     <string name="lithuanian">Lietuvių</string>
     <string name="english">Anglų</string>
+    <string name="sequence">Seka</string>
 
 </resources>
