--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="language">Language</string>
     <string name="lithuanian">Lithuanian</string>
     <string name="english">English</string>
+    <string name="sequence">Sequence</string>
 
 
 </resources>
