Map displays route distance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="lithuanian">Lithuanian</string>
     <string name="english">English</string>
     <string name="sequence">Sequence</string>
+    <string name="km">km</string>
 
 
 </resources>
